fix whitespaces

--- a/dot_config/swaync/executable_style.css
+++ b/dot_config/swaync/executable_style.css
@@ -1,7 +1,7 @@
 /* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
 /* swaync colors - wallust from waybar.css */
 
-@import '../../.cache/wal/colors-waybar.css';
+@import "../../.cache/wal/colors-waybar.css";
 
 @define-color noti-border-color @color12;
 @define-color noti-bg rgba(0, 0, 0, 0.8);
@@ -19,7 +19,7 @@
 .control-center .notification-row:hover {
     opacity: 1;
     background: @noti-bg;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .notification-row {
@@ -28,11 +28,11 @@
 }
 
 .notification {
-	border-radius: 10px;
+    border-radius: 10px;
 }
 
-.notification-content{
-	color: @text-color;
+.notification-content {
+    color: @text-color;
     background: @noti-bg;
     padding: 3px 10px 3px 6px;
     border-radius: 10px;
@@ -59,10 +59,9 @@
 .close-button:hover {
     box-shadow: none;
     background: #f7768e;
-    transition: all .15s ease-in-out;
-    border: none
+    transition: all 0.15s ease-in-out;
+    border: none;
 }
-
 
 .notification-action {
     border: 2px solid @noti-border-color;
@@ -70,11 +69,10 @@
     border-radius: 10px;
 }
 
-
 .notification-default-action:hover,
 .notification-action:hover {
     color: @text-color;
-    background: @color1
+    background: @color1;
 }
 
 .notification-default-action {
@@ -84,21 +82,21 @@
 
 .notification-default-action:not(:only-child) {
     border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px
+    border-bottom-right-radius: 7px;
 }
 
 .notification-action:first-child {
     border-bottom-left-radius: 10px;
-    background: #1b1b2b
+    background: #1b1b2b;
 }
 
 .notification-action:last-child {
     border-bottom-right-radius: 10px;
-    background: #1b1b2b
+    background: #1b1b2b;
 }
 
 .inline-reply {
-    margin-top: 8px
+    margin-top: 8px;
 }
 
 .inline-reply-entry {
@@ -106,32 +104,32 @@
     color: @text-color;
     caret-color: @text-color;
     border: 1px solid @noti-border-color;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .inline-reply-button {
-	font-size: 0.5rem;
+    font-size: 0.5rem;
     margin-left: 4px;
     background: @noti-bg;
     border: 1px solid @noti-border-color;
     border-radius: 10px;
-    color: @text-color
+    color: @text-color;
 }
 
 .inline-reply-button:disabled {
     background: initial;
     color: @text-color-disabled;
-    border: 1px solid transparent
+    border: 1px solid transparent;
 }
 
 .inline-reply-button:hover {
-    background: @noti-bg-hover
+    background: @noti-bg-hover;
 }
 
 .body-image {
     margin-top: 6px;
     color: @text-color-alt;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .summary {
@@ -139,7 +137,7 @@
     font-weight: bold;
     background: transparent;
     color: @text-color-alt;
-    text-shadow: none
+    text-shadow: none;
 }
 
 .time {
@@ -148,7 +146,7 @@
     background: transparent;
     color: @text-color;
     text-shadow: none;
-    margin-right: 18px
+    margin-right: 18px;
 }
 
 .body {
@@ -156,22 +154,22 @@
     font-weight: bold;
     background: transparent;
     color: @text-color;
-    text-shadow: none
+    text-shadow: none;
 }
 
 .control-center {
     background: @noti-bg;
     border: 2px solid @noti-border-color;
-	color: @text-color;
+    color: @text-color;
     border-radius: 10px;
 }
 
 .control-center-list {
-    background: transparent
+    background: transparent;
 }
 
 .control-center-list-placeholder {
-    opacity: 0.5
+    opacity: 0.5;
 }
 
 .floating-notifications {
@@ -179,7 +177,7 @@
 }
 
 .blank-window {
-    background: alpha(black, 0.1)
+    background: alpha(black, 0.1);
 }
 
 .widget-title {
@@ -191,15 +189,15 @@
     border-radius: 10px;
 }
 
-.widget-title>button {
+.widget-title > button {
     font-size: 0.75rem;
     color: @text-color;
     border-radius: 10px;
-	background: transparent;
-	border: 0.5px solid @noti-border-color;
+    background: transparent;
+    border: 0.5px solid @noti-border-color;
 }
 
-.widget-title>button:hover {
+.widget-title > button:hover {
     background: #f7768e;
     color: @noti-border-color;
 }
@@ -213,32 +211,32 @@
     color: @noti-border-color;
 }
 
-.widget-dnd>switch {
+.widget-dnd > switch {
     border-radius: 10px;
     /* border: 1px solid #7aa2f7; */
     background: @noti-border-color;
 }
 
-.widget-dnd>switch:checked {
+.widget-dnd > switch:checked {
     background: #f7768e;
     border: 1px solid #f7768e;
 }
 
-.widget-dnd>switch slider {
+.widget-dnd > switch slider {
     background: @noti-bg;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
-.widget-dnd>switch:checked slider {
+.widget-dnd > switch:checked slider {
     background: @noti-bg;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .widget-label {
     margin: 5px;
 }
 
-.widget-label>label {
+.widget-label > label {
     font-size: 1rem;
     color: @text-color;
 }
@@ -262,42 +260,42 @@
 
 .widget-mpris-title {
     font-weight: 100;
-    font-size: 1rem
+    font-size: 1rem;
 }
 
 .widget-mpris-subtitle {
-    font-size: 0.75rem
+    font-size: 0.75rem;
 }
 
 .widget-buttons-grid {
     font-size: large;
-	color: @noti-border-color;
+    color: @noti-border-color;
     padding: 2px;
     margin: 5px;
     border-radius: 10px;
     background: @noti-bg-alt;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button {
+.widget-buttons-grid > flowbox > flowboxchild > button {
     margin: 1px;
     background: @noti-bg;
     border-radius: 10px;
-    color: @text-color
+    color: @text-color;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button:hover {
+.widget-buttons-grid > flowbox > flowboxchild > button:hover {
     background: rgba(122, 162, 247, 0.1);
-    color: @text-color-alt
+    color: @text-color-alt;
 }
 
-.widget-menubar>box>.menu-button-bar>button {
+.widget-menubar > box > .menu-button-bar > button {
     border: none;
-    background: transparent
+    background: transparent;
 }
 
-.topbar-buttons>button {
+.topbar-buttons > button {
     border: none;
-    background: transparent
+    background: transparent;
 }
 
 .widget-volume {
@@ -306,12 +304,12 @@
     margin: 10px 10px 5px 10px;
     border-radius: 10px;
     font-size: x-large;
-    color: @text-color
+    color: @text-color;
 }
 
-.widget-volume>box>button {
+.widget-volume > box > button {
     background: #7aa2f7;
-    border: none
+    border: none;
 }
 
 .per-app-volume {
@@ -319,7 +317,7 @@
     padding: 4px 8px 8px;
     margin: 0 8px 8px;
     border-radius: 10px;
-	color: @text-color
+    color: @text-color;
 }
 
 .widget-backlight {
@@ -328,23 +326,23 @@
     margin: 10px 10px 5px 10px;
     border-radius: 10px;
     font-size: x-large;
-    color: @text-color
+    color: @text-color;
 }
 
 .low {
-  background: @text-color;
-  padding: 0px;
-  border-radius: 10px;
+    background: @text-color;
+    padding: 0px;
+    border-radius: 10px;
 }
 
 .normal {
-  background: @text-color;
-  padding: 0px;
-  border-radius: 10px;
+    background: @text-color;
+    padding: 0px;
+    border-radius: 10px;
 }
 
 .critical {
-  background: red;
-  padding: 0px;
-  border-radius: 10px;
+    background: red;
+    padding: 0px;
+    border-radius: 10px;
 }
